--- a/pom.xml
+++ b/pom.xml
@@ -89,11 +89,18 @@
             <artifactId>wiremock-standalone</artifactId>
             <version>4.0.0-beta.15</version>
         </dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>RELEASE</version>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>2.0.13</version>
         </dependency>
 
 
@@ -103,7 +110,6 @@
         <!--            <artifactId>extentreports-cucumber7-adapter</artifactId>-->
         <!--            <version>1.13.0</version>-->
         <!--        </dependency>-->
-
 
     </dependencies>
 
